--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"type": "git",
 		"url": "https://github.com/misskey-dev/misskey.git"
 	},
-	"packageManager": "pnpm@9.6.0",
+	"packageManager": "pnpm@9.7.1",
 	"workspaces": [
 		"packages/frontend",
 		"packages/backend",
@@ -74,5 +74,9 @@
 	},
 	"optionalDependencies": {
 		"@tensorflow/tfjs-core": "4.4.0"
+	},
+	"volta": {
+		"node": "20.16.0",
+		"pnpm": "9.7.1"
 	}
 }
