--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@discordapp/twemoji": "15.0.3",
+		"@fontsource/jetbrains-mono": "^5.0.21",
 		"@github/webauthn-json": "2.1.1",
 		"@mcaptcha/vanilla-glue": "0.1.0-alpha-3",
 		"@misskey-dev/browser-image-resizer": "2024.1.0",
@@ -56,6 +57,8 @@
 		"misskey-js": "workspace:*",
 		"misskey-reversi": "workspace:*",
 		"photoswipe": "5.4.4",
+		"pretendard": "^1.3.9",
+		"pretendard-jp": "^1.3.9",
 		"punycode": "2.3.1",
 		"rollup": "4.19.1",
 		"sanitize-html": "2.13.0",
